fixed some sizing stuff on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,16 @@
     box-sizing: border-box;
 }
 body{
-    margin:0;   
+    margin:0; 
+    background:#282828;
+    color:whitesmoke;
+    /* display: block; */
+    text-align: center;
+    font-size:1.6vw;
+    font-family: Arial, Helvetica, sans-serif;
+    margin:0;
 } 
-.main{
+/* .main{
     background:#282828;
     color:whitesmoke;
     display: block;
@@ -12,8 +19,10 @@ body{
     font-size:1.6vw;
     font-family: Arial, Helvetica, sans-serif;
     margin:0;
+    width:100%;
     
-}
+    
+} */
 nav{
     display: flex;
     justify-content: center;
